use bokeh app server instead of asyncio initial splom plot seems to work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ classifiers = [
 dependencies = [
     "bokeh",
     "aiohttp",
+    "aiohttp-devtools",
     "aiohttp-jinja2",
     "numpy",
     "scipy",
     "pandas",
     "networkx",
-    "../py_ipc"
+    "umap-learn",
+    "sklearn"
 ]
 
 [project.urls]
