fix relative imports in __main__.py added missing packages to setuptools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,9 @@ dependencies = [
 "Homepage" = "https://git.zib.de/bschmitt/py_cora.git"
 
 [tool.setuptools]
-packages = ["cora"]
+packages = [
+    "cora",
+    "cora.data_provider",
+    "cora.view"
+]
+
