renamed cora to coda :(

--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Cora
-data/**/cora_*.csv
+# Coda
+data/**/coda_*.csv
