--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "cora"
+name = "coda"
 version = "0.0.0"
-description = "An interactive exploration tool for cold-water coral colonies."
+description = "An interactive exploration tool for cold-water coral colonies and other dendroid structures."
 readme = "README.md"
 requires-python = ">= 3.9"
 classifiers = [
@@ -26,12 +26,12 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://git.zib.de/bschmitt/py_cora.git"
+"Homepage" = "https://github.com/AdorablePotato/coda"
 
 [tool.setuptools]
 packages = [
-    "cora",
-    "cora.data_provider",
-    "cora.view"
+    "coda",
+    "coda.data_provider",
+    "coda.view"
 ]
 
